# Computer_Vision_Classes

./: CMakeLists.txt  README.md
Data/GreenCameraInfo/: Distortion1.xml  Distortion2.xml  Distortion3.xml  Distortion4.xml  Distortion5.xml  Distortion_mean.xml  Intrinsics1.xml  Intrinsics2.xml  Intrinsics3.xml  Intrinsics4.xml  Intrinsics5.xml  Intrinsics_mean.xml  average_camera_info.py
Data/Project2_Files/: Distortion.xml  Distortion1.xml  Distortion2.xml  Distortion3.xml  Distortion4.xml  Distortion5.xml  Intrinsics.xml  Intrinsics1.xml  Intrinsics2.xml  Intrinsics3.xml  Intrinsics4.xml  Intrinsics5.xml  LinesXMLCell1Und.xml  LinesXMLCell3Und.xml  LinesXMLCell5.xml  LinesXMLCell6300.xml  LinesXMLCell6Und300.xml  LinesXMLCell7300.xml  LinesXMLCell8Und300.xml  LinesXMLCell9300.xml  average_camera_info.py
Data/Project2_Files/15/: LinesXMLCell115.xml  LinesXMLCell1Und15.xml  LinesXMLCell215.xml  LinesXMLCell2Und15.xml  LinesXMLCell415.xml  LinesXMLCell515.xml  LinesXMLCell615.xml  LinesXMLCell7Und15.xml  (+2 more)
Project1/: CMakeLists.txt  ProjectObjectives.txt  ReadMe.txt  project1_req1.cpp  project1_req2.cpp  project1_req3.cpp  project1_req4.cpp
Project2/: CMakeLists.txt  ProjectObjectives.txt  buildall.sh  project2_req1.cpp  project2_req2.cpp  project2_req3.cpp  project2_req4.cpp  projeto2.cpp  projeto2.h
Project2/Calibration_Files/: Distortion.xml  Distortion1.xml  Distortion2.xml  Distortion3.xml  Distortion4.xml  Distortion5.xml  Intrinsics.xml  Intrinsics1.xml  Intrinsics2.xml  Intrinsics3.xml  Intrinsics4.xml  Intrinsics5.xml  LinesXMLCell1300.xml  LinesXMLCell2.xml  LinesXMLCell2Und.xml  LinesXMLCell3300.xml  LinesXMLCell4.xml  LinesXMLCell4Und.xml  LinesXMLCell5Und.xml  LinesXMLCell7Und.xml  LinesXMLCell8.xml  LinesXMLCell9Und300.xml  average_camera_info.py
Project2/Calibration_Files/15/: LinesXMLCell315.xml  LinesXMLCell3Und15.xml  LinesXMLCell4Und15.xml  LinesXMLCell5Und15.xml  LinesXMLCell6Und15.xml  LinesXMLCell715.xml  LinesXMLCell8Und15.xml  LinesXMLCell915.xml
Project2/Calibration_Files/80e150/: LinesXMLCell180.xml  LinesXMLCell1Und80.xml  LinesXMLCell280.xml  LinesXMLCell315.xml  LinesXMLCell380.xml  LinesXMLCell3Und15.xml  LinesXMLCell3Und80.xml  LinesXMLCell4Und15.xml  LinesXMLCell4Und80.xml  LinesXMLCell615.xml  LinesXMLCell6Und80.xml  LinesXMLCell715.xml  LinesXMLCell7Und80.xml  LinesXMLCell8Und15.xml  LinesXMLCell8Und80.xml  LinesXMLCell980.xml
Project3/: CMakeLists.txt  ProjectObjectives.txt  project3.cpp  project3.h  project3_req1.cpp
Project4/: CMakeLists.txt  ProjectObjectives.txt  Readme.txt  project4.h  project4_req1234.cpp
Project5/: CMakeLists.txt  ProjectObjectives.txt  project5.cpp  project5.h  project5_req1.cpp
Project5/fruit/: GLCM_0degrees.xml  GLCM_45degrees.xml
Project5/wine/: GLCM_0degrees.xml  GLCM_45degrees.xml
Project6/: CMakeLists.txt  main.cpp  project6.cpp  project6.h
Project7/: CMakeLists.txt  ProjectObjectives.txt  backgroundsubtraction.cpp  main.cpp  project7.h
Week1/: CMakeLists.txt  begin.cpp  begin_video.cpp  webcam_test.cpp
(+22 files in other folders)
