

add_executable( Project2_Req1 project2_req1.cpp)
target_link_libraries( Project2_Req1 ${OpenCV_LIBS} )

add_executable( Project2_Req2 project2_req2.cpp)
target_link_libraries( Project2_Req2 ${OpenCV_LIBS} )

add_executable( Project2_Req3 project2_req3.cpp)
target_link_libraries( Project2_Req3 ${OpenCV_LIBS} )

add_executable( Project2_Req4 project2_req4.cpp)
target_link_libraries( Project2_Req4 ${OpenCV_LIBS} )
